# minkowski

./: .gitignore  .jscpd.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: design-doc.md  perf-shakedown.md  pr.md  self-audit.md  soundness-audit.md  validate-api.md
.claude/skills/: minkowski-guide.md
.config/: nextest.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
ci/: miri-subset.txt  run-miri-subset.sh
crates/minkowski/: Cargo.toml
crates/minkowski-bench/: Cargo.toml
crates/minkowski-derive/: Cargo.toml
crates/minkowski-lsm/: Cargo.toml
crates/minkowski-observe/: Cargo.toml
crates/minkowski-observe/src/: diff.rs  lib.rs  prometheus.rs  snapshot.rs
crates/minkowski-persist/: Cargo.toml
crates/minkowski-persist/benches/: lsm_compaction.rs  lsm_level_sweep.rs  lsm_throughput.rs  persist.rs
crates/minkowski-persist/src/: blob.rs  checkpoint.rs  codec.rs  durable.rs  format.rs  index.rs  lib.rs  record.rs  recover.rs  replication.rs  slotted_page.rs  snapshot.rs  wal.rs
crates/minkowski-py/: Cargo.toml  pyproject.toml
docs/: perf-roadmap.md  performance.md  queries.md  reducer-correctness.md
docs/adr/: 008-wal-snapshot-persistence.md  011-btree-hash-column-indexes.md  015-pull-based-wal-replication.md
docs/plans/: 2026-02-27-boids-sim-design.md  2026-02-28-change-detection-design.md  2026-02-28-change-detection-plan.md  2026-02-28-changeset-design.md  2026-02-28-changeset-typed-api-plan.md  2026-02-28-game-of-life-design.md  2026-02-28-query-cache-design.md  2026-03-01-access-metadata-design.md  2026-03-01-access-metadata-plan.md  2026-03-01-orphan-queue-design.md  2026-03-01-orphan-queue-plan.md  2026-03-01-secondary-index-hooks-design.md  2026-03-01-secondary-index-hooks-plan.md  2026-03-02-persistence-design.md  2026-03-02-persistence-plan.md  2026-03-04-reducers-design.md  2026-03-05-durable-reducers-design.md  (+21 more)
examples/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_lsm_recovery.rs  fuzz_wal_replay.rs  fuzz_world_ops.rs
notebooks/: 01_boids.ipynb  02_nbody.ipynb  03_life.ipynb  ruff.toml
scripts/: capture-bench-baseline.sh
(+104 files in other folders)
